--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,13 @@ nav ul li {
   list-style: none;
   margin-right: 36px;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .flexible {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,28 +99,26 @@ nav ul li {
 }
 /* --Players Styles-- */
 .players-container {
-  display: grid;
-  place-items: center;
+  width: 1100px;
   margin-top: 70px;
 }
 .players {
-  width: 55%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
-.player {
+.player-cards {
   padding: 15px;
 }
-.player img {
+.player-cards img {
   width: 300px;
 }
-.player h2 {
+.player-cards h2 {
   color: #18191f;
   font-size: 28px;
   margin-bottom: 10px;
 }
-.player p {
+.player-cards p {
   margin-bottom: 15px;
 }
 /* Highlight Sectin Styles */
@@ -158,14 +162,11 @@ nav ul li {
 }
 /* Product Section Styles */
 .products-container {
-  display: grid;
-  place-items: center;
+  width: 1000px;
 }
 .products {
-  width: 60%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  place-items: center;
   gap: 30px;
 }
 .product {
@@ -222,8 +223,5 @@ footer p {
   color: #000000;
   font-size: 18px;
 }
-
-
-
 
 /* ----------------------------------------------END----------------------------------------------- */
