--- a/styles/style.css
+++ b/styles/style.css
@@ -225,3 +225,7 @@ footer p {
 }
 
 /* ----------------------------------------------END----------------------------------------------- */
+
+iframe {
+  margin: 50px;
+}
