--- a/styles/style.css
+++ b/styles/style.css
@@ -226,6 +226,6 @@ footer p {
 
 /* ----------------------------------------------END----------------------------------------------- */
 
-iframe {
+#live {
   margin: 50px;
 }
